# mchaver.com

./: .gitignore  .gitmodules  ChangeLog.md  README.md  about.rst  contact.markdown  css-book.md  demos.markdown  ideas.txt  index.html  mchaver-com.cabal  projects.md  site.hs
backup-posts/: 2017-03-22-ruby-metaprogramming-hooks.markdown  2017-03-23-metaprogramming-is-a-core-ruby-language-feature.markdown  2017-03-28-ruby-is-pass-by-value.markdown  2017-05-17-lambda-calculus  2017-05-17-lambda-calculus.lhs  2017-05-18-simply-typed-lambda-calculus.lhs  2017-05-19-dependent-typed-lambda-calculus.lhs  2017-05-19-system-f.lhs  2017-06-09-ghc-runtime-garbage-collection.md  2017-06-09-haskell-libraries-ekg-statsd.md  2017-06-12-ekg-core.md  2017-06-25-latex-table-with-fixed-sized-cells.md  2017-07-16-computer-networks-1.md  2017-07-16-computer-networks-2.md  2017-07-23-injective-type-families.md  2017-07-24-profunctor.md  2017-07-25-lens-tutorial-2.lhs  2017-07-28-understanding-GHCJS.md  2017-08-09-haskell-functor-introduction.md  2017-10-29.lhs  2018-03-30-lambda-calculus.md  2018-03-30-propsitional-calculus.md  2018-05-17-modulus-and-remainder.md  2018-06-02-multidimensional-arrays-in-rust.md  LaTeX-concepts-and-primitives.md  css.md  latex-rotating-font.md  tiny-servant.lhs
css/: default.css  syntax.css
demos/bs-game-of-life/: index.html
demos/jp_keyboard/: index.css  index.html
demos/measurements/: asset-manifest.json  index.html  service-worker.js
demos/measurements/static/css/: main.7d5b27f9.css  main.e8f88850.css  main.e8f88850.css.map
demos/measurements/static/js/: main.dd72b0d7.js  main.dd72b0d7.js.map
notes/books/ATTAPL/: 1-Chapter-1.md  2-Chapter-2.md
notes/books/TAPL/: 1-Chapter-9.md  10-Chapter-22.md  11-Chapter-23.md  12-Chapter-24.md  2-Chapter-11.md  29-Chapter-29.md  3-Chapter-12.md  30-Chapter-30.md  4-Chapter-13.md  5-Chapter-14.md  6-Chapter-15.md  7-Chapter-16.md  8-Chapter-20.md  9-Chapter-21.md  99-Challenging-Concepts.md  Chapter-9.md
notes/books/TTFP/: 1-Chapter-1.md  2-Chapter-2.md  3-Chapter-3.md  4-Chapter-4.md  5-Chapter-5.md  6-Chapter-6.md  7-Chapter-7.md
notes/git/: git-internals.md
notes/haskell/: curry-howard-isomorphism.md  denotational-semantics.md  laziness.md
notes/notation/type-theory/: proof-tree-typed-lambda-calculus.md
notes/type-theory/: 1-kind.md  2-lambda-calculus.md  3-milner-hindley.md  kind.md
notes/type-theory/typed-lambda-calculus/: substitution.md
posts/: 2015-05-22-generalized-algebraic-data-types.md  2016-05-05-new.markdown  2016-05-09-attoparsec-tutorial-1.lhs  2016-05-09-attoparsec-tutorial-2.lhs  2016-05-09-parse-and-return-values.md  2016-05-09-parser-combinators-and-test-driven-parsing.md  2016-05-10-attoparsec-tutorial-3.lhs  2016-05-12-parse-data-in-variable-order-part-2.md  2016-05-13-persistent-migration-strategies.md  2016-05-16-required-and-optional-data-in-variable-order.md  2016-05-18-abstract-syntax-tree.md  2016-05-19-versioned-documents.md  2016-05-22-generalized-algebraic-data-types.md  2016-05-22-phantom-types-and-gadts.md  2016-05-24-json-as-ffi.md  2016-07-05-how-to-read-type-rules.md  2016-07-23-specialized-subtypes.md  2016-08-11-axioms.md  2016-08-11-formal-proofs.md  2017-03-23-metaprogramming-is-a-core-ruby-language-feature.markdown  2017-03-23-ruby-metaprogramming-tutorial-1.md  2017-06-06-servant-auth-and-elm-example.md  2017-06-08-exploring-haskell-bytestring.md  2017-06-09-ghc-runtime-heap-and-stack.md  2017-06-12-haskell-network-programming-1.lhs  2017-06-12-haskell-network-programming-2.lhs  2017-06-13-linux-command-line-1.md  2017-06-13-linux-network-tools-1.md  2017-06-13-linux-network-tools-2.md  2017-06-13-linux-network-tools-3.md  2017-06-19-kinds-in-haskell.md  2017-06-20-type-level-heterogeneous-list.lhs  2017-06-21-type-families.md  2017-06-22-type-level-list-search.lhs  2017-06-23-introducing-simple-store-and-simple-cell.md  2017-06-24-using-curl-and-graphql.md  2017-06-25-orphan-instances.md  2017-06-26-tex-core-concepts.md  2017-06-28-sqlite-simple.lhs  2017-06-28-sqlite-simple.md  (+21 more)
projects/game-of-life/: index.html  main.js
projects/jp_keyboard/: index.css  keyboard.js  romaji.gc.wasm
projects/measurements/: asset-manifest.json  index.html  manifest.json  service-worker.js
templates/: default.html  note.html  notes.html  post-list.html  post.html  tutorial-list.html  tutorials.html
tutorials/Attoparsec/: 2016-05-18-parsing-with-indentation.md
tutorials/haskell/algebraic-data-types/: Introduction.md
tutorials/haskell/attoparsec/: 2016-05-18-parsing-with-indentation.md
tutorials/posts/haskell/: 2016-07-19-effects.md
tutorials/projects/haskell/aeson/1-aeson-testing/: ChangeLog.md  aeson-testing.cabal
tutorials/projects/haskell/aeson/1-aeson-testing/src/: Types.hs
tutorials/projects/haskell/aeson/1-aeson-testing/tests/: TypesSpec.hs
tutorials/projects/haskell/database/db-migration-example/: README.md  db-migration-example.cabal  test.sqlite
tutorials/projects/haskell/database/db-migration-example/app/: Main.hs
tutorials/projects/haskell/database/db-migration-example/src/Tutorial/: Models.hs
tutorials/projects/haskell/database/db-migration-example/src/Tutorial/Models/: Migrations.hs
tutorials/projects/haskell/database/db-migration-example/src/Tutorial/Models/Migrations/: Models20160101.hs  Models20160201.hs  Models20160301.hs  Models20160401.hs
tutorials/projects/haskell/generic/generic-tutorial/: generic-tutorial.cabal
tutorials/projects/haskell/generic/generic-tutorial/src/Tutorial/Generic/: TypeData.hs
tutorials/projects/haskell/generic/generic-tutorial/test/Tutorial/Generic/: TypeDataSpec.hs
tutorials/projects/haskell/haxl/haxl-example/: haxl-example.cabal  stack.yaml
tutorials/projects/haskell/haxl/haxl-example/app/: Main.hs
tutorials/projects/haskell/haxl/haxl-example/src/: Lib.hs  Models.hs
tutorials/projects/haskell/servant/1-servant-with-persistent/test-types/: test-types.cabal
tutorials/projects/haskell/servant/1-servant-with-persistent/test-types/src/Test/: Api.hs  Models.hs  Types.hs
(+72 files in other folders)
