name:               mchaver-com
version:            0.1.0.0
build-type:         Simple
cabal-version:      2.0

executable site
  main-is:          site.hs
  build-depends:    base >= 4.18 && < 5
                  , blaze-html
                  , data-default
                  , hakyll >= 4.16 && < 4.17
                  , pandoc
  ghc-options:      -threaded
  default-language: GHC2021
