name:                aeson-testing
version:             0.1.0.0
synopsis:            Test data types with aeson instances with attributable            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              James M.C. Haver II
maintainer:          mchaver@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Types
  build-depends:       base >=4.8 && <4.9
                     , aeson
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010



test-suite test
  type:              exitcode-stdio-1.0
  main-is:           Spec.hs
  default-language:  Haskell2010
  hs-source-dirs:     src
                     ,tests
  ghc-options:       -threaded -O0 -Wall

  build-depends:     base
                   , aeson
                   , hspec
                   , random
                   , QuickCheck
                   , text
                   , transformers