name:                db-migration-example
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/db-migration-example#readme
license:             BSD3
license-file:        LICENSE
author:              James M.C. Haver II
maintainer:          mchaver@gmail.com
copyright:           2016 James M.C. Haver II
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tutorial.Models
                       Tutorial.Models.Migrations
                       Tutorial.Models.Migrations.Models20160101
                       Tutorial.Models.Migrations.Models20160201
                       Tutorial.Models.Migrations.Models20160301
                       Tutorial.Models.Migrations.Models20160401
  build-depends:       base >= 4.7 && < 5
                     , monad-control
                     , monad-logger
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , resourcet
                     , text
                     , transformers
  default-language:    Haskell2010

executable db-migration-example
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , db-migration-example
                     , persistent
                     , persistent-sqlite
                     , persistent-template
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , db-migration-example
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mchaver/mchaver.com-tutorials
