name:                test-types
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              James M.C. Haver II
maintainer:          mchaver@gmail.com
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Test.Api
                     , Test.Models

  build-depends:       base >=4.8 && <4.9
                     , aeson
                     , persistent
                     , persistent-template
                     , servant
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
